2011-02-23  Takashi Toyoshima  <toyoshim@chromium.org>

        Reviewed by Shinichiro Hamaji.

        [chromium] Control-Up/Down should be PageUp/Down on Mac.
        https://bugs.webkit.org/show_bug.cgi?id=54606

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::scrollViewWithKeyboard):

2011-02-22  Kenneth Russell  <kbr@google.com>

        Reviewed by James Robinson.

        Many tests started timing out on the chrome mac canaries around r79035
        https://bugs.webkit.org/show_bug.cgi?id=54885

        Revert the code changes, but not the Chromium DEPS roll, from
        r79038 to see whether this clears up the timing-out tests. Was not
        able to reproduce the timeouts locally with a Release mode build
        of DRT (on Snow Leopard).

        * src/WebKit.cpp:
        (WebKit::initialize):

2011-02-21  Nico Weber  <thakis@chromium.org>

        Reviewed by James Robinson.

        [chromium] WebWorkerBase::openFileSystem confuses clang's -Woverloaded-virtual
        https://bugs.webkit.org/show_bug.cgi?id=54920

        Rename WebWorkerBase::openFileSystem() to openFileSystemForWorker() to
        make it obvious it's not an override of
        WebFrameClient::openFileSystem().

        Remove a failed attempt to override it in WebWorkerClientImpl (the
        override didn't change the behavior).

        No intended functionality change.

        * src/LocalFileSystemChromium.cpp:
        (WebCore::LocalFileSystem::requestFileSystem):
        Call new name.
        * src/WebWorkerBase.cpp:
        (WebKit::WebWorkerBase::openFileSystemForWorker):
        Rename openFileSystem() to openFileSystemForWorker().
        * src/WebWorkerBase.h:
        Rename openFileSystem() to openFileSystemForWorker().
        * src/WebWorkerClientImpl.h:
        (WebKit::WebWorkerClientImpl::allowDatabase):
        Remove unsuccessful (and pointless) override.

2011-02-22  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.
