@@ -1210,8 +1210,7 @@ void WebViewHost::reset()
 
     if (m_webWidget) {
         webView()->mainFrame()->setName(WebString());
-        // FIXME: change to use webkit_support::ForegroundTabTimerInterval once that lands.
-        webView()->settings()->setMinimumTimerInterval(0.004);
+        webView()->settings()->setMinimumTimerInterval(webkit_support::GetForegroundTabTimerInterval());
     }
 }
 
